# araneae.reasoner

./: .gitignore  CMakeLists.txt  Readme.md  build.sbt  main.cpp  version.sbt
configs/: jni-config.json  reflect-config.json  resource-config.json
memory/: Atom.h  Memory.h  Term.h
project/: plugins.sbt
src/main/protobuf/: Agent-Events.proto  Agents.proto  Drone.proto  Drones.proto  HelloWorld.proto
src/main/resources/: application.conf  logback.xml
src/main/scala/paloul/araneae/cluster/: Main.scala  MainServicesSupport.scala  MainSettingsSupport.scala  MainSupportDrones.scala  MainSupportInit.scala  MainSupportSettings.scala  Settings.scala
src/main/scala/paloul/araneae/cluster/actors/: Agent.scala  Drone.scala
src/main/scala/paloul/araneae/cluster/processors/: DroneKafkaProcessor.scala
src/main/scala/paloul/araneae/cluster/reasoners/nars/: Reasoner.scala
src/main/scala/paloul/araneae/cluster/rest/: CoreApiRoutes.scala  RestServicesSupport.scala
src/main/scala/paloul/araneae/cluster/util/: LoggerEnabled.scala  PerformanceMetrics.scala  Settings.scala
src/main/scala/paloul/araneae/reasoner/: Main.scala  MainServicesSupport.scala  MainSettingsSupport.scala  Settings.scala
src/main/scala/paloul/araneae/reasoner/engine/: Readme.md
src/main/scala/paloul/araneae/reasoner/hypergraph/: HgHandle.scala  HyperGraph.scala  HyperNode.scala  Readme.md
src/main/scala/paloul/araneae/reasoner/rest/: CoreApiRoutes.scala  RestServicesSupport.scala
src/main/scala/paloul/araneae/reasoner/util/: LoggerEnabled.scala  PerformanceMetrics.scala
(+46 files in other folders)
